--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -257,8 +257,9 @@ a:focus {
 }
 #map {
   width: 100%;
-  height: 200px;
-  margin-top: 100px;
+  height: 100%;
+  margin-top: 0px;
+  padding-bottom: 200px;
 }
 @media (min-width: 767px) {
   .content-section {
@@ -272,7 +273,8 @@ a:focus {
   }
   #map {
     height: 400px;
-    margin-top: 250px;
+    margin-top: 50px;
+    padding: 100px 0;
   }
 }
 .btn {
